--- a/index.html
+++ b/index.html
@@ -9,27 +9,37 @@
 <body>
     <header>
         <nav>
-            <a lang="en" href="#">
+            <a lang="en" href="./index.html">
                 WebStudio
             </a>
             <ul>
                 <li>
-                    <a href="#">Студия</a>
+                    <a href="./index.html">
+                        Студия
+                    </a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Портфолио</a>
+                    <a href="./portfolio.html">
+                        Портфолио
+                    </a>
                 </li>
                 <li>
-                    <a href="#">Контакты</a>
+                    <a href="#">
+                        Контакты
+                    </a>
                 </li>
             </ul>
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">
+                    +38 096 111 11 11
+                </a>
             </li>
         </ul>
     </header>
@@ -87,13 +97,20 @@
             </h2>
             <ul>
                 <li>
-                    <a href="#"><img src="./images/what-we-do1.jpg" alt="написание_программы" width="370" height="294"></a>
+                    <a href="#">
+                        <img src="./images/what-we-do1.jpg" alt="написание_программы" width="370" height="294">
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="./images/what-we-do2.jpg" alt="Решение" width="370" height="294"></a>
+                    <a href="#">
+                        <img src="./images/what-we-do2.jpg" alt="Решение" width="370" height="294">
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="./images/what-we-do3.jpg" alt="Оптимизация" width="370" height="294"></a>
+
+                    <a href="#">
+                        <img src="./images/what-we-do3.jpg" alt="Оптимизация" width="370" height="294">
+                    </a>
                 </li>
             </ul>
         </section>
@@ -142,19 +159,25 @@
         </section>
     </main>
     <footer>
-        <a lang="en" href="#">
+        <a lang="en" href="./index.html">
             WebStudio
         </a>
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </address>
