--- a/portfolio.html
+++ b/portfolio.html
@@ -1,55 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a lang="en" href="#">
+            <a lang="en" href="./index.html">
                 WebStudio
             </a>
             <ul>
                 <li>
-                    <a href="#">Студия</a>
+                    <a href="./index.html">
+                        Студия
+                    </a>
                 </li>
                 <li>
-                    <a href="#">Портфолио</a>
+                    <a href="./portfolio.html">
+                        Портфолио
+                    </a>
                 </li>
                 <li>
-                    <a href="#">Контакты</a>
+                    <a href="#">
+                        Контакты
+                    </a>
                 </li>
             </ul>
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">
+                    +38 096 111 11 11
+                </a>
             </li>
         </ul>
     </header>
     <main>
-        
+        <section>
+            <h1 lang="en">
+                Portfolio
+            </h1>
+            <ul>
+                <li>
+                    <a href="">
+                        Все
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Веб-сайты
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Приложения
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Дизайн
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Маркетинг
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2 lang="en">Catalog</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Технокряк</h3>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Ресторан <span lang="en">Seafood</span></h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Проект <span lang="en">Prime</span></h3>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Проект<span lang="en">Boxes</span></h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3 lang="en">Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Издание<span lang="en">Limited Edition</span></h3>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3>Проект<span lang="en">LAB</span></h3>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="" width="370" height="294">
+                        <h3 lang="en">Growing Business</h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <a lang="en" href="#">
+        <a lang="en" href="./index.html">
             WebStudio
         </a>
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </address>
