--- a/portfolio.html
+++ b/portfolio.html
@@ -82,63 +82,63 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
                         <h3>Технокряк</h3>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
                         <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
                         <h3>Ресторан <span lang="en">Seafood</span></h3>
                         <p>Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
                         <h3>Проект <span lang="en">Prime</span></h3>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
                         <h3>Проект<span lang="en">Boxes</span></h3>
                         <p>Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
                         <h3 lang="en">Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
                         <h3>Издание<span lang="en">Limited Edition</span></h3>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
                         <h3>Проект<span lang="en">LAB</span></h3>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="" width="370" height="294">
+                        <img src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
                         <h3 lang="en">Growing Business</h3>
                         <p>Приложение</p>
                     </a>
