--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a lang="en" href="./index.html">
+            <a lang="en" href="#">
                 WebStudio
             </a>
             <ul>
@@ -159,7 +159,7 @@
         </section>
     </main>
     <footer>
-        <a lang="en" href="./index.html">
+        <a lang="en" href="#">
             WebStudio
         </a>
         <address>
