--- a/portfolio.html
+++ b/portfolio.html
@@ -9,161 +9,161 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a lang="en" href="./index.html">
+        <nav class="header-nav">
+            <a class="header-nav-link" lang="en" href="#">
                 WebStudio
             </a>
             <ul>
                 <li>
-                    <a href="./index.html">
+                    <a class="header-nav-link" href="./index.html">
                         Студия
                     </a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">
+                    <a class="header-nav-link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a class="header-nav-link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">
+        <ul class="header-list">
+            <li class="header-contact">
+                <a class="header-link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li>
-                <a href="tel:+380961111111">
+            <li class="header-contact">
+                <a class="header-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
         </ul>
     </header>
     <main>
-        <section>
-            <h1 lang="en">
+        <section class="menu">
+            <h1 class="menu-title" lang="en">
                 Portfolio
             </h1>
-            <ul>
-                <li>
-                    <a href="">
+            <ul class="menu-list">
+                <li class="manu-list-item">
+                    <a class="menu-link" href="">
                         Все
                     </a>
                 </li>
-                <li>
-                    <a href="">
+                <li class="manu-list-item">
+                    <a class="menu-link" href="">
                         Веб-сайты
                     </a>
                 </li>
-                <li>
-                    <a href="">
+                <li class="manu-list-item">
+                    <a class="menu-link" href="">
                         Приложения
                     </a>
                 </li>
-                <li>
-                    <a href="">
+                <li class="manu-list-item">
+                    <a class="menu-link" href="">
                         Дизайн
                     </a>
                 </li>
-                <li>
-                    <a href="">
+                <li class="manu-list-item">
+                    <a class="menu-link" href="">
                         Маркетинг
                     </a>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2 lang="en">Catalog</h2>
-            <ul>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
+        <section class="catalog">
+            <h2 class="catalog-title" lang="en">Catalog</h2>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <h3 class="catalog-image-title">Технокряк</h3>
+                        <p class="catalog-image-descr">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
-                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p>Дизайн</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
+                        <h3 class="catalog-image-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="catalog-image-descr">Дизайн</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
-                        <h3>Ресторан <span lang="en">Seafood</span></h3>
-                        <p>Приложение</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
+                        <h3 class="catalog-image-title">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="catalog-image-descr">Приложение</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
-                        <h3>Проект <span lang="en">Prime</span></h3>
-                        <p>Маркетинг</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
+                        <h3 class="catalog-image-title">Проект <span lang="en">Prime</span></h3>
+                        <p class="catalog-image-descr">Маркетинг</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
-                        <h3>Проект<span lang="en">Boxes</span></h3>
-                        <p>Приложение</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
+                        <h3 class="catalog-image-title">Проект<span lang="en">Boxes</span></h3>
+                        <p class="catalog-image-descr">Приложение</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 lang="en">Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <h3 class="catalog-image-title" lang="en">Inspiration has no Borders</h3>
+                        <p class="catalog-image-descr">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
-                        <h3>Издание<span lang="en">Limited Edition</span></h3>
-                        <p>Дизайн</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
+                        <h3 class="catalog-image-title">Издание<span lang="en">Limited Edition</span></h3>
+                        <p class="catalog-image-descr">Дизайн</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
-                        <h3>Проект<span lang="en">LAB</span></h3>
-                        <p>Маркетинг</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
+                        <h3 class="catalog-image-title">Проект<span lang="en">LAB</span></h3>
+                        <p class="catalog-image-descr">Маркетинг</p>
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
-                        <h3 lang="en">Growing Business</h3>
-                        <p>Приложение</p>
+                <li class="catalog-item">
+                    <a class="catalog-link" href="">
+                        <img class="catalog-image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
+                        <h3 class="catalog-image-title" lang="en">Growing Business</h3>
+                        <p class="catalog-image-descr">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a lang="en" href="./index.html">
+        <a lang="en" href="#">
             WebStudio
         </a>
         <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+            <ul class="address-list">
+                <li class="address-item">
+                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li>
-                    <a href="mailto:info@devstudio.com">
+                <li class="address-item">
+                    <a class="address-link" href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
-                <li>
-                    <a href="tel:+380961111111">
+                <li class="address-item">
+                    <a class="address-link" href="tel:+380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
