--- a/portfolio.html
+++ b/portfolio.html
@@ -51,29 +51,29 @@
             </h1>
             <ul class="menu-list">
                 <li class="manu-list-item">
-                    <a class="menu-link" href="">
+                    <button type="button" class="menu-btn">
                         Все
-                    </a>
+                    </button>
                 </li>
                 <li class="manu-list-item">
-                    <a class="menu-link" href="">
+                    <button type="button" class="menu-btn">
                         Веб-сайты
-                    </a>
+                    </button>
                 </li>
                 <li class="manu-list-item">
-                    <a class="menu-link" href="">
+                    <button type="button" class="menu-btn">
                         Приложения
-                    </a>
+                    </button>
                 </li>
                 <li class="manu-list-item">
-                    <a class="menu-link" href="">
+                    <button type="button" class="menu-btn">
                         Дизайн
-                    </a>
+                    </button>
                 </li>
                 <li class="manu-list-item">
-                    <a class="menu-link" href="">
+                    <button type="button" class="menu-btn">
                         Маркетинг
-                    </a>
+                    </button>
                 </li>
             </ul>
         </section>
