--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="link" lang="en" href="#">
+            <a class="nav-link" lang="en" href="#">
                 WebStudio
             </a>
-            <ul class="list">
-                <li class="list-item">
-                    <a class="link" href="./index.html">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="list-link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li class="list-item">
+                <li class="nav-item">
                     <a class="link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li class="list-item">
+                <li class="nav-item">
                     <a class="link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul class="list-contacts">
-            <li class="contact">
-                <a class="link" href="mailto:info@devstudio.com">
+        <ul class="contacts">
+            <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="contact">
-                <a class="link" href="tel:+380961111111">
+            <li class="contacts-item">
+                <a class="contacts-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -108,7 +108,6 @@
                     </a>
                 </li>
                 <li>
-
                     <a href="#">
                         <img src="./images/what-we-do3.jpg" alt="Оптимизация" width="370" height="294">
                     </a>
@@ -121,46 +120,54 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/team_card_1.jpg" alt="Игорь" width="270" height="250">
-                    <h3>
+                    <a href="">
+                        <img src="./images/team_card_1.jpg" alt="Игорь" width="270" height="250">
+                        <h3>
                         Игорь Демьяненко
-                    </h3>
-                    <p lang="en">
-                        Product Designer
-                    </p>
+                        </h3>
+                        <p lang="en">
+                            Product Designer
+                        </p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/team_card_2.jpg" alt="Ольга" width="270" height="250">
-                    <h3>
-                        Ольга Репина
-                    </h3>
-                    <p lang="en">
-                        Frontend Developer
-                    </p>
+                    <a href="">
+                        <img src="./images/team_card_2.jpg" alt="Ольга" width="270" height="250">
+                        <h3>
+                            Ольга Репина
+                        </h3>
+                        <p lang="en">
+                            Frontend Developer
+                        </p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/team_card_3.jpg" alt="Николай" width="270" height="250">
-                    <h3>
-                        Николай Тарасов
-                    </h3>
-                    <p lang="en">
-                        Marketing
-                    </p>
+                    <a href="">
+                        <img src="./images/team_card_3.jpg" alt="Николай" width="270" height="250">
+                        <h3>
+                            Николай Тарасов
+                        </h3>
+                        <p lang="en">
+                            Marketing
+                        </p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/team_card_4.jpg" alt="Михаил" width="270" height="250">
-                    <h3>
-                        Михаил Ермаков
-                    </h3>
-                    <p lang="en">
-                        UI Designer
-                    </p>
+                    <a href="">
+                        <img src="./images/team_card_4.jpg" alt="Михаил" width="270" height="250">
+                        <h3>
+                            Михаил Ермаков
+                        </h3>
+                        <p lang="en">
+                            UI Designer
+                        </p>
+                    </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a lang="en" href="#">
+        <a class="footer-link" lang="en" href="#">
             WebStudio
         </a>
         <address>
