--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="section team">
             <h2 class="section-title">
                 Наша команда
             </h2>
