--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
             </a>
             <ul class="list">
                 <li class="item">
-                    <a class="link" href="./index.html">
+                    <a class="link current" href="./index.html">
                         Студия
                     </a>
                 </li>
@@ -49,7 +50,7 @@
             <h1 class="title">
                 Эффективные решения для вашего бизнеса
             </h1>
-            <button type="button" class="btn">
+            <button type="button" class="btn secondary">
                 Заказать услугу
             </button>
         </section>
