--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
                     </a>
                 </li>
                 <li class="item">
-                    <a class="link" href="./portfolio.html">
+                    <a class="link current" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
@@ -51,26 +52,26 @@
             </h2>
             <ul class="menu-list list">
                 <li class="item">
-                    <button type="button" class="btn">
+                    <button type="button" class="btn primary">
                         Все
                     </button>
                 </li>
                 <li class="item">
-                    <button type="button" class="btn">
+                    <button type="button" class="btn primary">
                         Веб-сайты
                     </button>
                 <li class="item">
-                    <button type="button" class="btn">
+                    <button type="button" class="btn primary">
                         Приложения
                     </button>
                 </li>
                 <li class="item">
-                    <button type="button" class="btn">
+                    <button type="button" class="btn primary">
                         Дизайн
                     </button>
                 </li>
                 <li class="item">
-                    <button type="button" class="btn">
+                    <button type="button" class="btn primary">
                         Маркетинг
                     </button>
                 </li>
