--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="nav">
+        <nav class="site-nav">
             <a class="logo" lang="en" href="#">
                 <span class="logo-part" lang="en">Web</span>Studio
             </a>
