--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <main>
         <section class="catalog">
             <h1 class="section-title" lang="en">
-               catalog
+                Catalog
             </h1>
             <ul class="menu-list list">
                 <li class="item">
