--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -76,7 +82,7 @@
                     </button>
                 </li>
             </ul>
-            <ul class="catalog-lis2 list">
+            <ul class="catalog-list list">
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
