--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,12 @@
         </nav>
         <ul class="header-contacts list">
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact" href="mailto:info@devstudio.com">
+                <a class="header-link contact" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact" href="tel:+380961111111">
+                <a class="header-link contact" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
