--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             </ul>
         </nav>
         <ul class="header-contacts list">
-            <li class="header-contacts-item">
+            <li class="header-item">
                 <a class="header-link contact" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="header-contacts-item">
+            <li class="header-item">
                 <a class="header-link contact" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
